<resources>
    <string name="app_name">Tinkoff</string>
    <string name="api_key">AIzaSyALKVWzEqDCRQX7Q7_6cHicp7NrXj4zE6A</string>
    <string name="order_phone_number">Номер телефона: +79222235522</string>
    <string name="order_name">ФИО: Тестов Пользователь Банкович</string>
    <string name="order_contract">Договор: 2380093-212</string>
    <string name="order_longitude">Долгота: 65.12341</string>
    <string name="order_latitude">Широта: 58.2193</string>
    <string name="order_address">Адрес: Мира 32</string>
    <string name="order_date">Дата: 02 декабря 2018г., 16:18</string>
</resources>