<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvPhoneOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_phone_number" />

    <TextView
        android:id="@+id/tvNameOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_name" />

    <TextView
        android:id="@+id/tvContractOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_contract" />

    <TextView
        android:id="@+id/latitudeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_latitude" />

    <TextView
        android:id="@+id/tvLongitudeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_longitude" />

    <TextView
        android:id="@+id/tvAddressOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_address" />

    <TextView
        android:id="@+id/tvDatetimeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/order_date" />

</LinearLayout>